[package]

name = "unicode"
version = "0.0.1"
authors = ["The Rust Project Developers"]

license = "MIT/Apache-2.0"
repository = "https://github.com/RustyGecko/rust-unicode"
homepage = "http://doc.rust-lang.org/nightly/unicode/"
description = """
unicode as a stand-alone crate
"""

[lib]
name = "unicode"
path = "rust/src/libunicode/lib.rs"

[target.thumbv7m-none-eabi.dependencies.core]
git = "https://github.com/sondrele/rust-libcore.git"
