[package]

name = "unicode"
version = "0.0.1"
authors = ["The Rust Project Developers"]

license = "MIT/Apache-2.0"
repository = "https://github.com/RustyGecko/rust-unicode"
homepage = "http://doc.rust-lang.org/nightly/unicode/"
description = """
unicode as a stand-alone crate
"""

build = "build.rs"

[lib]
name = "unicode"
path = "rust/src/libunicode/lib.rs"

[build-dependencies.rust_src]
git = "https://github.com/sondrele/rust-src.git"

[target.thumbv7m-none-eabi.dependencies.core]
git = "https://github.com/RustyGecko/rust-core.git"
